# uwimageproc

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  README-test.md  README.md  TODO  detect_blur.py
modules/: CMakeLists.txt  template.cpp
modules/aclahe/: ACLAHE.py  CMakeLists.txt  README.md  aclahe.cpp  curve_fit.cpp
modules/aclahe/python/: README.md  functions.py  main.py
modules/aclahe/src/: aclahe.cpp
modules/bgdehaze/: README.md  util.py
modules/blob/: CMakeLists.txt  Doxyfile  alt.cpp  blob.cpp
modules/calibration/: CMakeLists.txt  USB_PICS.xml  calibracion.cpp
modules/common/: README.md  args.hxx  preprocessing.cpp  preprocessing.h
modules/feature/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  feature  feature.cpp
modules/histretch/: CMakeLists.txt  README.md  histretch.cpp
modules/histretch/scripts/: histretch.cpp.in  preprocessing.cpp.in  preprocessing.h.in
modules/histretch/src/: histretch.cpp
modules/sample/: CMakeCache.txt  Makefile  cmake_install.cmake  template  template.cpp
modules/undistort/: CMakeLists.txt  LIST.xml  PARAMETERS.xml  undistort.cpp
modules/utils/: preprocessing.cpp  preprocessing.h
modules/videostrip/: CMakeLists.txt  Doxyfile  README.md  videostrip  videostrip.cpp  videostrip_cpu.cpp
modules/videostrip/doc/: Doxyfile
modules/videostrip/include/: options.h  videostrip.hpp
modules/videostrip/scripts/: Doxyfile  videostrip.cpp.in
modules/videostrip/src/: main.cpp  videostrip.cpp
scripts/: Doxyfile  README.md  batch_process.sh  extract_frames.sh  group_files.sh  list_images.sh
tools/: extract_frames.sh  list_images.sh
